--- a/jetson/Notebook.ipynb
+++ b/jetson/Notebook.ipynb
@@ -125,9 +125,9 @@
     "# Define ENDPOINT, CLIENT_ID, PATH_TO_CERTIFICATE, PATH_TO_PRIVATE_KEY, PATH_TO_AMAZON_ROOT_CA_1, MESSAGE, TOPIC, and RANGE\n",
     "ENDPOINT = \"a2o3601o47s8jg-ats.iot.us-west-2.amazonaws.com\"\n",
     "CLIENT_ID = \"testDevice\"\n",
-    "PATH_TO_CERTIFICATE = \"certificates/25ff5e3c73dbd69f08ea301947ea3faf9d5eb78bd05a02ed724ccf674252ade2-certificate.pem.crt\"\n",
-    "PATH_TO_PRIVATE_KEY = \"certificates/25ff5e3c73dbd69f08ea301947ea3faf9d5eb78bd05a02ed724ccf674252ade2-private.pem.key\"\n",
-    "PATH_TO_AMAZON_ROOT_CA_1 = \"certificates/AmazonRootCA1.pem\"\n",
+    "PATH_TO_CERTIFICATE = \"\"\n",
+    "PATH_TO_PRIVATE_KEY = \"\"\n",
+    "PATH_TO_AMAZON_ROOT_CA_1 = \"\"\n",
     "MESSAGE = \"Hello World\"\n",
     "TOPIC = \"device/1/data\"\n",
     "DEVICEID = 1\n",
